# Sugarcube2-Localization

./: .env.template  .gitignore  .gitmodules  NOTE.md  README.md  TODO.md  main.py  pyproject.toml
src/: __init__.py  config.py  database.py  exceptions.py  gui.py  log.py  toast.py
src/core/: __init__.py  utils.py
src/core/paratranz/: __init__.py  paratranz.py
src/core/parser/: __init__.py  core.py  internal.py  javascript.py  lexer.py  twee3.py  tweego_parser.py  twine.py  wikifier.py
src/core/reviewer/: internal.py  javascript.py  twee3.py
src/core/schema/: __init__.py  data_model.py  enum.py  model.py  sql_model.py
src/sugarcube2_localization/: __init__.py  config.py  database.py  exceptions.py  log.py  toast.py
src/sugarcube2_localization/core/: utils.py
src/sugarcube2_localization/core/parser/: __init__.py  internal.py  javascript.py  lexer.py  parserlib.py  twee3.py
src/sugarcube2_localization/core/reviewer/: __init__.py  internal.py  javascript.py  twee3.py
src/sugarcube2_localization/core/schema/: __init__.py  data_model.py  enum.py  sql_model.py
src/sugarcube2_localization/tools/: update_parse.py
src/sugarcube2_localization/tools/paratranz/: paratranz.py
src/tools/: __init__.py  update_parse.py
src/tools/paratranz/: paratranz.py
tests/: test_core_utils_get_all_filepaths.py  test_core_utils_traceback_detail.py
